Improve logging configuration by providing a logger.cfg file, configure WARN level by default instead of INFO and provide a --log-level option to override default level

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,7 @@ include CHANGELOG.rst
 include LICENSE
 include README.rst
 
+include awscli_saml_sso/logger.cfg
+
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
